--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .bullypic{
-  background-image:url("https://drive.google.com/file/d/1g1Tp7H2S_hxLxtFQqJ7-V1Q6tlXcp6zE/view");
+  background-image:url("https://c1.staticflickr.com/1/231/497345495_f3480418bb_b.jpg");
   height:80vh;
   background-repeat:no-repeat;
   background-position: center;
